Closed Bug 1866272 Opened 10 months ago Closed 10 months ago

Fix the support for WPT print reftests on macOS

Categories

(Core :: Printing: Output, defect, P2)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox121 --- fixed
firefox122 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

References

Details

Attachments

(1 file)

No description provided.
Summary: Support WPT print reftests on macOS → Fix the support for WPT print reftests on macOS

In 1760836, we added support for printing PDF to nsIOutputStream because
GeckoView needs that to save webpages as PDFs. At some point since then, WPT
print reftests started to use this code path. Unfortunately, the
print-pdf-to-stream code on macOS has been creating PDF output with very small
pages, and ignoring any attempts to set page size from CSS or nsIPrintSettings.

I assume this issue went unnoticed when the WPT print reftests started to use
the print-pdf-to-stream code because tests and references were both equally
affected. However, the tests that I'm creating for mixed page sizes fail if
they can't set the page size properly. This patch fixes that issue so that I
can land those tests.

Blocks: 1836059
Attachment #9365219 - Attachment description: Bug 1866272. Fix the support for WPT print reftests on macOS. r=emilio → Bug 1866272. Support CSS page-size in WPT print reftests on macOS. r=emilio
Pushed by jwatt@jwatt.org: https://hg.mozilla.org/integration/autoland/rev/6354cfb105a6 Support CSS page-size in WPT print reftests on macOS. r=emilio
Status: NEW → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch

Comment on attachment 9365219 [details]
Bug 1866272. Support CSS page-size in WPT print reftests on macOS. r=emilio

Beta/Release Uplift Approval Request

  • User impact if declined: Blocks 1836059, which is currently enabled for early beta, but we want to ride the trains in v121 as part of an H2 goal.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Tests only. (All automated tests passed on Nightly shortly after the 121 branch, so very likely the same on 121.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9365219 - Flags: approval-mozilla-beta?

Comment on attachment 9365219 [details]
Bug 1866272. Support CSS page-size in WPT print reftests on macOS. r=emilio

Approved for 121.0b5.

Attachment #9365219 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: