Bug 1866272. Support CSS page-size in WPT print reftests on macOS. r=emilio, a=RyanVM

This WPT RFC proposes adding support for CSS page-size in WPT Print Reftests:
https://github.com/web-platform-tests/rfcs/pull/173

I've made the necessary changes to enable that in bug 1866319, but it turns out
that this change doesn't work on Mac if/when we take the nsIOutputStream code
path (as we do when generating PDF output for WPT Print Reftests).

This fixes the nsIOutputStream code path in our Mac printing code to support
setting page sizes in PDF output, just as the non-nsIOutputStream code path
does.

Differential Revision: https://phabricator.services.mozilla.com/D194534